# touchless-ui

./: .gitignore  CMakeLists.txt
include/: EditGestureWindow.hpp  EditKeyframe.hpp
src/: EditGestureWindow.cpp  EditKeyframe.cpp  main.cpp
xml/: main.glade  main.glade~  main.ui~
